# hubbit

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: backend.yml  frontend.yml
backend/: .env.example  Cargo.toml  Dockerfile  dev.Dockerfile  sqlx-data.json  wait-for-postgres.sh
backend/.sqlx/: query-0f71815a79c870b57bb4e7f026414cd67a87a65e6a431ffc281e1c83bf7535e6.json  query-102deaab74a199bd61c10bf2c7ee008ea6407321a59daea39fe32ba34eab0570.json  query-12ededa21ed2b06e359c253baa556749ad9d486ef4808ab14c8288391f2f6ca1.json  query-17941bac79c37eb7fcc3c41f2c9d8d7f5873ca1604129435b04a742cf396a18b.json  query-2270f0282a12559e896420705557b66828173b6bb973e45e8cb77a23164b6ca6.json  query-264bbd05b957d4de626dac6d6662eb5fcb4febdf165a75be3fac96ffc8d12199.json  query-2872539a545a9ea255105d95e0eed039dd04f0e9fceb9b6e8e5849506cb23430.json  query-39f9215e98f6ea19d6a471222ba43d5b3c562a5d313c6f4df0b3097125812508.json  query-484062ad76551609d5208a655a4ff2f2a479cb0acd8e67ac2eba2e8da21e5344.json  query-48580297b14e9c9f11fb035c4f6149d6842fa81c6ffeaa22225fc6b83aec129d.json  query-572ab49b1f194ee667cf2f6a1ce23df88924fdd76bbe8831acd72726def228f3.json  query-6a9ac04404d86e0fd476e8ed5ef8d5013baddfcd9c4d8c93787fdd47c784777f.json  query-a9c6a44b2e9cc5fcefa4c26b2e9bdfa3c7a40a3d850f7008f9fa6aab532304f6.json  query-b066a23f1d603ab1cc7be062c178fc813ba215e8f3bf5c5adaa59a6c084794c3.json  query-bb7debbaa13b268021369268de99c4613b40b431d93aac5fa5a6f70c8e2d3db1.json  query-bee0ccc4b6d29f9a1de05930c5bf32663f78d386c6d20c998ee6e35be6be62d0.json  query-c59db58a285309fc6001b72bee2440f8c4730b3ad45630323e894d39400aa7e5.json  query-cc3e0d48436903bfd2da63609f81dd7948adf67a71ebdeb196ea00d4a03add1f.json  query-d412060f6c54602fffb43b1bbaffffc037c9ab50cb3f41c1ee3be4dd963f2cfa.json  query-d8aa702e3447a8c36bf204d8eb766cf707c422750ee7541e196601aba0154222.json
backend/src/: config.rs  error.rs  models.rs
backend/src/handlers/: auth.rs  graphql.rs  session.rs
backend/src/repositories/: session.rs  user.rs  user_session.rs
backend/src/schema/: device.rs  me.rs  mod.rs  session.rs  stats.rs  user.rs
backend/src/services/: user.rs  util.rs
backend/src/services/stats/: cache.rs  data.rs  mod.rs  util.rs
backend/src/utils/: gamma.rs  mod.rs
frontend/: Dockerfile  dev.Dockerfile  next.config.mjs  package.json  schema.gql  tsconfig.json
frontend/src/: client.ts  dateUtil.ts  util.ts
frontend/src/components/UserStatsCard/: UserStatsCard.module.scss  UserStatsCard.tsx
frontend/src/components/active-group-list/: ActiveGroupList.module.scss  ActiveGroupsList.tsx
frontend/src/components/active-users-list/: ActiveUserList.module.scss  ActiveUserList.tsx
frontend/src/components/device-list/: DeviceList.module.scss  DeviceList.tsx
frontend/src/components/footer/: Footer.module.scss
frontend/src/components/header/: Header.module.scss  Header.tsx
frontend/src/components/hours-in-hubb-graph/: HoursInHubbGraph.module.scss  HoursInHubbGraph.tsx
frontend/src/components/stats-navigation/: StatsNavigation.tsx
frontend/src/components/stats-table/: StatsTable.module.scss  StatsTable.tsx
frontend/src/components/stats-timespan-select/: StatsTimespanSelect.module.scss  StatsTimespanSelect.tsx
frontend/src/contexts/: auth.tsx
frontend/src/global-styles/: groups.scss  roboto-font.css  silkscreen.css  tables.scss  vars.scss
frontend/src/pages/: _app.tsx  index.module.scss  index.tsx
setup/: gamma.sql  gamma_mock.sql  hubbit.sql  hubbit_mock.sql
(+15 files in other folders)
