[package]
name = "backend"
version = "0.0.1"
authors = ["Rasmus Rosengren <rasmus.rosengren@pm.me>"]
edition = "2021"
default-run = "server"

[dependencies]
actix-session = { version = "0.6.2", features = ["cookie-session"] }
actix-web = "4.0.1"
actix-web-httpauth = "0.6.0"
async-graphql = { version = "4.0.0", features = ["chrono", "uuid08"] }
async-graphql-actix-web = "4.0.0"
async-trait = "0.1"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
lazy_static = "1.4.0"
log = "0.4.17"
mobc = "0.7.3"
mobc-redis = "0.7.0"
once_cell = "1.10.0"
rand = "0.8.5"
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
slab = "0.4.6"
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "uuid", "offline"] }
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "0.8.2", features = ["serde"] }
