[package]
name = "backend"
version = "0.0.1"
authors = ["Rasmus Rosengren <rasmus.rosengren@pm.me>"]
edition = "2021"
default-run = "server"

[dependencies]
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.5.1"
actix-web-httpauth = "0.8.1"
async-graphql = { version = "7.0.2", features = ["chrono", "uuid"] }
async-graphql-actix-web = "7.0.2"
async-trait = "0.1"
chrono = { version = "0.4.34", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
lazy_static = "1.4.0"
log = "0.4.17"
mobc = "0.7.3"
mobc-redis = "0.7.0"
once_cell = "1.10.0"
rand = "0.8.5"
reqwest = { version = "0.11.10", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
slab = "0.4.6"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate",
    "chrono",
    "uuid",
] }
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
uuid = { version = "1.7.0", features = ["serde"] }
