[package]
name = "backend"
version = "0.0.1"
authors = ["Rasmus Rosengren <rasmus.rosengren@pm.me>", "Vidar Magnusson <hubbit-dev@vidarmagnusson.com>"]
edition = "2021"
default-run = "server"

[dependencies]
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.5.1"
actix-web-httpauth = "0.8.1"
async-graphql = { version = "7.0.2", features = ["chrono", "uuid"] }
async-graphql-actix-web = "7.0.2"
chrono = { version = "0.4.34", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.2"
futures = "0.3.30"
lazy_static = "1.4.0"
log = "0.4.20"
mobc = "0.8.3"
mobc-redis = "0.8.2"
once_cell = "1.19.0"
rand = "0.8.5"
reqwest = { version = "0.11.24", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
slab = "0.4.9"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate",
    "chrono",
    "uuid",
] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
uuid = { version = "1.7.0", features = ["serde"] }
